objects/Reporting__c.object
<CustomObject>
    <description>Reporting on Asks</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Ask__r.Account__r.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ask__c</fullName>
        <description>The Ask this report is for</description>
        <inlineHelpText>The Ask this report is for</inlineHelpText>
        <label>Ask</label>
        <referenceTo>Ask__c</referenceTo>
        <relationshipLabel>Reporting</relationshipLabel>
        <relationshipName>Reporting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_report_is_due__c</fullName>
        <label>Date report due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_report_submitted__c</fullName>
        <label>Date report submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_on_report_requirements__c</fullName>
        <label>Notes on report requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submission_due_within_60_days__c</fullName>
        <description>Returns &apos;Yes&apos; if the submission date is not and the submission date is within 60 days of today. Return &apos;No&apos; if otherwise.</description>
        <formula>IF( ISNULL(Date_report_submitted__c ) &amp;&amp; Date_report_is_due__c &lt;= (TODAY()+60) , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows &apos;Yes&apos; if the report has not been submitted, and the submission date is within 60 days of today</inlineHelpText>
        <label>Submission due within 60 days?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_overdue__c</fullName>
        <formula>IF( ISNULL(Date_report_submitted__c ) &amp;&amp;   Date_report_is_due__c  &lt;=  TODAY() , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Shows &apos;Yes&apos; if the report has not been submitted, and the submission date is today or has passed</inlineHelpText>
        <label>Submission overdue?</label>
        <type>Text</type>
    </fields>
    <label>Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{000000}</displayFormat>
        <label>Reporting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>